// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test SqlManagementConf/ScanTypesDynamicParams render defaultValue is defined 1`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
    >
      <section
        class="has-border css-1114g56"
      >
        <section
          class="css-bspaai"
        >
          <h1
            class="ant-typography css-1eepp70 css-dev-only-do-not-override-txh9fw"
          >
            编辑扫描详情·MySQL库表元数据
          </h1>
          <div
            class="lazy-load-wrapper lazy-load-wrapper-show css-952l0m"
          >
            <div
              class="ant-form-item has-label-tip css-1jlm9cy css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-col-11 ant-form-item-label css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class=""
                    for="mysql_schema_meta_collect_interval_minute"
                    title=""
                  >
                    <div
                      class="label-cont-custom"
                    >
                      <div>
                        采集周期
                      </div>
                      <div
                        class="tip-content-box"
                      >
                        分钟
                      </div>
                    </div>
                  </label>
                </div>
                <div
                  class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <input
                        class="ant-input css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
                        id="mysql_schema_meta_collect_interval_minute"
                        placeholder="请输入{{name}}"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item  css-1jlm9cy css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-col-11 ant-form-item-label css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class=""
                    for="mysql_schema_meta_collect_view"
                    title=""
                  >
                    <div
                      class="label-cont-custom"
                    >
                      <div>
                        是否采集视图信息
                      </div>
                      <div
                        class="tip-content-box"
                        hidden=""
                      />
                    </div>
                  </label>
                </div>
                <div
                  class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <button
                        aria-checked="false"
                        class="ant-switch basic-switch-wrapper css-g6dhbn css-dev-only-do-not-override-txh9fw"
                        id="mysql_schema_meta_collect_view"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item has-label-tip has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required"
                  for="mysql_schema_meta_ruleTemplateName"
                  title=""
                >
                  <div
                    class="label-cont-custom"
                  >
                    <div>
                      审核规则模版
                    </div>
                    <div
                      class="tip-content-box"
                    >
                      如果未指定此项会优先使用数据源绑定的模板
                    </div>
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-allow-clear ant-select-show-arrow"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="mysql_schema_meta_ruleTemplateName_list_0"
                            aria-autocomplete="list"
                            aria-controls="mysql_schema_meta_ruleTemplateName_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="mysql_schema_meta_ruleTemplateName_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="mysql_schema_meta_ruleTemplateName"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          请选择{{name}}
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
      </section>
    </form>
  </div>
</body>
`;

exports[`test SqlManagementConf/ScanTypesDynamicParams render init snap shot 1`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
    >
      <section
        class="has-border css-1114g56"
      >
        <section
          class="css-bspaai"
        >
          <h1
            class="ant-typography css-1eepp70 css-dev-only-do-not-override-txh9fw"
          >
            编辑扫描详情·MySQL库表元数据
          </h1>
          <div
            class="lazy-load-wrapper lazy-load-wrapper-show css-952l0m"
          >
            <div
              class="ant-form-item has-label-tip css-1jlm9cy css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-col-11 ant-form-item-label css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class=""
                    for="mysql_schema_meta_collect_interval_minute"
                    title=""
                  >
                    <div
                      class="label-cont-custom"
                    >
                      <div>
                        采集周期
                      </div>
                      <div
                        class="tip-content-box"
                      >
                        分钟
                      </div>
                    </div>
                  </label>
                </div>
                <div
                  class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <input
                        class="ant-input css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
                        id="mysql_schema_meta_collect_interval_minute"
                        placeholder="请输入{{name}}"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item  css-1jlm9cy css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-col-11 ant-form-item-label css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class=""
                    for="mysql_schema_meta_collect_view"
                    title=""
                  >
                    <div
                      class="label-cont-custom"
                    >
                      <div>
                        是否采集视图信息
                      </div>
                      <div
                        class="tip-content-box"
                        hidden=""
                      />
                    </div>
                  </label>
                </div>
                <div
                  class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <button
                        aria-checked="false"
                        class="ant-switch basic-switch-wrapper css-g6dhbn css-dev-only-do-not-override-txh9fw"
                        id="mysql_schema_meta_collect_view"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item has-label-tip has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required"
                  for="mysql_schema_meta_ruleTemplateName"
                  title=""
                >
                  <div
                    class="label-cont-custom"
                  >
                    <div>
                      审核规则模版
                    </div>
                    <div
                      class="tip-content-box"
                    >
                      如果未指定此项会优先使用数据源绑定的模板
                    </div>
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-allow-clear ant-select-show-arrow"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="mysql_schema_meta_ruleTemplateName_list_0"
                            aria-autocomplete="list"
                            aria-controls="mysql_schema_meta_ruleTemplateName_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="mysql_schema_meta_ruleTemplateName_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="mysql_schema_meta_ruleTemplateName"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          请选择{{name}}
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
      </section>
    </form>
  </div>
</body>
`;

exports[`test SqlManagementConf/ScanTypesDynamicParams render param key is empty string 1`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`test SqlManagementConf/ScanTypesDynamicParams render submitLoading is true 1`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
    >
      <section
        class="has-border css-1114g56"
      >
        <section
          class="css-bspaai"
        >
          <h1
            class="ant-typography css-1eepp70 css-dev-only-do-not-override-txh9fw"
          >
            编辑扫描详情·MySQL库表元数据
          </h1>
          <div
            class="lazy-load-wrapper lazy-load-wrapper-show css-952l0m"
          >
            <div
              class="ant-form-item has-label-tip css-1jlm9cy css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-col-11 ant-form-item-label css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class=""
                    for="mysql_schema_meta_collect_interval_minute"
                    title=""
                  >
                    <div
                      class="label-cont-custom"
                    >
                      <div>
                        采集周期
                      </div>
                      <div
                        class="tip-content-box"
                      >
                        分钟
                      </div>
                    </div>
                  </label>
                </div>
                <div
                  class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <input
                        class="ant-input ant-input-disabled css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
                        disabled=""
                        id="mysql_schema_meta_collect_interval_minute"
                        placeholder="请输入{{name}}"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item  css-1jlm9cy css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-col-11 ant-form-item-label css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class=""
                    for="mysql_schema_meta_collect_view"
                    title=""
                  >
                    <div
                      class="label-cont-custom"
                    >
                      <div>
                        是否采集视图信息
                      </div>
                      <div
                        class="tip-content-box"
                        hidden=""
                      />
                    </div>
                  </label>
                </div>
                <div
                  class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <button
                        aria-checked="false"
                        class="ant-switch basic-switch-wrapper css-g6dhbn css-dev-only-do-not-override-txh9fw ant-switch-disabled"
                        disabled=""
                        id="mysql_schema_meta_collect_view"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item has-label-tip has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required"
                  for="mysql_schema_meta_ruleTemplateName"
                  title=""
                >
                  <div
                    class="label-cont-custom"
                  >
                    <div>
                      审核规则模版
                    </div>
                    <div
                      class="tip-content-box"
                    >
                      如果未指定此项会优先使用数据源绑定的模板
                    </div>
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-disabled"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="mysql_schema_meta_ruleTemplateName_list_0"
                            aria-autocomplete="list"
                            aria-controls="mysql_schema_meta_ruleTemplateName_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="mysql_schema_meta_ruleTemplateName_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            disabled=""
                            id="mysql_schema_meta_ruleTemplateName"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          请选择{{name}}
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
      </section>
    </form>
  </div>
</body>
`;
